--- a/style.css
+++ b/style.css
@@ -9,12 +9,10 @@
 
 body {
     font-family: "Poppins", sans-serif;
-    color: white;
 }
 
 html{
     scroll-behavior: smooth;
-    background-color: black;
 }
 
 p{
@@ -180,17 +178,17 @@ section {
 
 .section__text__p1{
     text-align: center;
-    color: grey;
+    color: black;
 }
 .section__text__p1{
-    font-size: 1.75rem;
+    font-size: 1.5rem;
     margin-bottom: 1rem;
 }
 
 .section__text__p2{
-    font-size: 1.5rem;
+    font-size: 2rem;
     margin-bottom: 1rem;
-    color: grey;
+    color: black;
 }
 
 .title{
@@ -209,5 +207,33 @@ section {
 
 .icon {
     cursor: pointer;
-    height: 2rem;
+    height: 3rem;
 }
+
+/* BUTTONS */
+
+.btn-container{
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.btn {
+    font-weight: 600;
+    transition: all 300ms ease;
+    padding: 0.8rem;
+    width: 8rem;
+    border-radius: 0.5rem;
+    font-size: 0.8rem;
+}
+
+.btn-color-1, .btn-color-2 {
+    border-radius: rgb(53,53,53) 0.1rem solid;
+    background-color: #E0D9C9;
+}
+
+.btn-color-1:hover, .btn-color-2:hover {
+    cursor: pointer;
+}
+
+
