--- a/style.css
+++ b/style.css
@@ -273,7 +273,7 @@ section {
 }
 
 .details-container {
-    padding: 1.5rem;
+    padding: 4rem;
     flex: 1;
     background: white;
     border-radius: 2rem;
@@ -345,4 +345,29 @@ article .icon{
 
 /* PROJECT SECTION */
 
+#projects {
+    position: relative;
+    margin-right: 100px;
+    margin-left: 100px;
+}
 
+.color-container {
+    border-color: rgb(163,163,163);
+    background: rgb(250,250,250);
+}
+
+.project-img{
+    border-radius: 2rem;
+    width: 90%;
+    height: 90%;
+}
+
+.project-title{
+    margin: 0.5rem;
+    color: black;
+}
+
+.project-btn {
+    color: black;
+    border-color: rgb(163,163,163);
+}
