--- a/style.css
+++ b/style.css
@@ -180,12 +180,13 @@ section {
 
 .section__text__p1{
     text-align: center;
-    color: black;
+    color: rgb(181,181,181);
 }
-.section__text__p1{
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
+.section__text__p1, .section__text__p1_ {
+    font-size: 1.25rem;
+    margin-bottom: 0.2rem;
 }
+
 
 .section__text__p2{
     font-size: 2rem;
